# cmodule

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.md  README.rst  hello.js  index.html  index.js  package.json
.github/workflows/: clean_dead_PR_caches.yml  cmake.yml  codeql.yml  linux.yml  macos.yml  static.yml  windows.yml
.github/workflows/macos/: macos.yml
doc/: index.html  package.json
doc/src/assets/css/: styles.css
doc/src/assets/css/framework/: site.css
github/workflows/linux/: cmake_ubuntu_latest.yml
github/workflows/windows/: cmake_win_latest.yml
include/cmodule/: add.h  binding.h  calc.h  cmodule.h  main.h  mathconstants.h  value.h
src/: add.cpp  binding.cpp  calc.cpp  cmodule.cc  main.cpp  value.cpp
support/cmake/: FixBundle.cmake.in  ModuleInit.cmake  cmodule.pc.in  cmoduleConfig.cmake.in  cmoduleConfig.h.in  cmoduleUserConfig.h.in
support/cmake/Modules/: FindCMakeJs.cmake  FindNode.cmake  FindNodeAddonAPI.cmake  JoinPaths.cmake  ModuleInit.cmake
support/environment/: .env  .env.deployment.local  .env.development.local  .env.production.local  .env.test.local
support/json/schemas/: CMakeSettings_schema.json
support/node/js/: bind.d.ts  bind.js  bindings.js
support/node/ts/: bind.ts
support/vcpkg/: portfile.in.cmake  vcpkg-configuration.in.json  vcpkg.in.json
test/: add.js  hello.js  run.js  run_from_bin_tree.cmake
